--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -137,7 +137,7 @@ source "drivers/mm/Kconfig"
 
 source "drivers/power_domain/Kconfig"
 
-source "drivers/usbc/Kconfig"
+source "drivers/usb_c/Kconfig"
 
 source "drivers/reset/Kconfig"
 
