CODEOWNERS: Add ownership for USB-C
Add myself as codeowner for the USB-C subsystem and sample

Signed-off-by: Sam Hurst <sbh1187@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -687,6 +687,7 @@
 /samples/subsys/mgmt/updatehub/           @nandojve @otavio
 /samples/subsys/mgmt/osdp/                @sidcha
 /samples/subsys/usb/                      @jfischer-no
+/samples/subsys/usb_c/                    @sambhurst
 /samples/subsys/pm/                       @nashif @ceolin
 /samples/tfm_integration/                 @microbuilder
 /samples/userspace/                       @dcpleung @nashif
@@ -795,6 +796,7 @@ scripts/build/gen_image_info.py           @tejlmand
 /subsys/timing/                           @nashif @dcpleung
 /subsys/usb/                              @jfischer-no
 /subsys/usb/device/class/dfu/usb_dfu.c    @nvlsianpu
+/subsys/usb/usb_c/                        @sambhurst
 /tests/                                   @nashif
 /tests/arch/arm/                          @ioannisg @stephanosio
 /tests/benchmarks/cmsis_dsp/              @stephanosio
